[package]
name = "droneconf"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.2.8", features = ["headers", "multipart"] }
hyper = "0.14.16"
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.1", features = ["add-extension"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.51"
structopt = "0.3.22"
toml = "0.5.8"
reqwest = { version = "0.11", features = ["stream", "multipart", "json"] }
thiserror = "1.0.30"
url = {version = "2.2.2", features = ["serde"]}